<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/inputText" />
	    <View
		    android:layout_width="30dp"
		    android:layout_height="fill_parent"
		    android:background="#80000000">
		</View>    
	    <Button
	        android:id="@+id/btnSend"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btnSend" 
	        android:state_enabled="false"/>	
   </LinearLayout>       
  <EditText
        android:id="@+id/inputText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text=""
        android:ems="10" >
   </EditText>
   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/receivedText" />
	    <View
		    android:layout_width="30dp"
		    android:layout_height="fill_parent">
		</View>     
	    <Button
	        android:id="@+id/btnClear"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btnClear" 
	        android:state_enabled="false"/>	
   </LinearLayout>        <TextView
        android:id="@+id/receivedText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text=""
        android:ems="10" />   	    
   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >    
	    <Button
	        android:id="@+id/btnOn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btnOn"/>

	
	    <Button
	        android:id="@+id/btnOff"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btnOff" />	
	        
	    <View
		    android:layout_width="30dp"
		    android:layout_height="fill_parent">
		</View>     
	    <Button
	        android:id="@+id/btnSetMAC"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btnSetMAC"/>		    
	 </LinearLayout>
</LinearLayout>