<?xml version="1.0" encoding="utf-8"?>


	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical">
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textStyle="bold"
	        android:text="@string/setMACActivity" >
	    </TextView>     
    
	  	<EditText
		        android:id="@+id/inputmac"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:textStyle="bold"
		        android:text="" >
   		</EditText>

  	    
		<LinearLayout
		     android:layout_width="match_parent"
		     android:layout_height="wrap_content" >
		
		     <Button
		         android:id="@+id/cancel"
		         android:layout_width="wrap_content"
		         android:layout_height="wrap_content"
		         android:onClick="onButtonClicked"
		         android:text="@string/cancel" />

		     <Button
		         android:id="@+id/reset"
		         android:layout_width="wrap_content"
		         android:layout_height="wrap_content"
		         android:onClick="onButtonClicked"
		         android:text="@string/reset" />
		     		
		     <Button
		         android:id="@+id/ok"
		         android:layout_width="wrap_content"
		         android:layout_height="wrap_content"
		         android:onClick="onButtonClicked"
		         android:text="@string/ok" />
		
		</LinearLayout>

	</LinearLayout>
